log
Thu 20 Apr 2023 07:47:03 PM UTC: 
 tests:  1|8
total_score: 0/70
82a852b
Thu 20 Apr 2023 07:55:32 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
9563b5b
Thu 20 Apr 2023 07:56:07 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:5: error: ‘new_map’ undeclared (first use in this function)
   41 |     new_map->root = NULL;
      |     ^~~~~~~
treemap.c:41:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ad14489
Thu 20 Apr 2023 07:56:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:5: error: ‘new_map’ undeclared (first use in this function)
   41 |     new_map->root = NULL;
      |     ^~~~~~~
treemap.c:41:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
afeda38
Thu 20 Apr 2023 07:56:29 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
d8f4fd4
Thu 20 Apr 2023 09:30:13 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
330a21b
Thu 20 Apr 2023 09:44:31 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|7
total_score: 5/70
fd07606
Thu 20 Apr 2023 09:46:48 PM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:22: error: ‘map’ undeclared (first use in this function)
   80 |     TreeNode* node = map->root;
      |                      ^~~
treemap.c:80:22: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:85:20: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   85 |             return node;
      |                    ^~~~
cc1: all warnings being treated as errors
Compilation failed
df2e80e
Thu 20 Apr 2023 09:47:58 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:20: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   85 |             return node;
      |                    ^~~~
cc1: all warnings being treated as errors
Compilation failed
726add9
Thu 20 Apr 2023 09:48:12 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
f961ff7
Fri 21 Apr 2023 06:40:40 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
714ae89
Fri 21 Apr 2023 06:43:11 PM UTC: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++----------
 1 file changed, 32 insertions(+), 10 deletions(-)
 tests:  5|7
total_score: 5/70
01fdbf9
Fri 21 Apr 2023 06:49:50 PM UTC: 
 treemap.c | 44 ++++++++++++++++++++++----------------------
 1 file changed, 22 insertions(+), 22 deletions(-)
 tests:  8|6
total_score: 15/70
a0d98e9
Fri 21 Apr 2023 06:50:15 PM UTC: 
 treemap.c | 44 ++++++++++++++++++++++----------------------
 1 file changed, 22 insertions(+), 22 deletions(-)
 tests:  5|7
total_score: 5/70
9106671
Fri 21 Apr 2023 06:50:31 PM UTC: 
 treemap.c | 43 +++++++++++++++++++++----------------------
 1 file changed, 21 insertions(+), 22 deletions(-)
 tests:  8|6
total_score: 15/70
1c7045a
Fri 21 Apr 2023 07:13:23 PM UTC: 
 treemap.c | 27 +++++++++++++++++----------
 1 file changed, 17 insertions(+), 10 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
  134 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e8f8eab
Fri 21 Apr 2023 07:13:57 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
1ff85be
Fri 21 Apr 2023 07:18:15 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 15/70
91a0bb6
Fri 21 Apr 2023 07:18:37 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
450ac73
Fri 21 Apr 2023 07:20:18 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
99173d2
Fri 21 Apr 2023 07:23:47 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  14|5
total_score: 25/70
d901679
Fri 21 Apr 2023 07:26:27 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
dc9c18b
Fri 21 Apr 2023 07:28:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
fb39171
Fri 21 Apr 2023 07:28:49 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  14|5
total_score: 25/70
876f5da
Fri 21 Apr 2023 07:32:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
713c8fa
Fri 21 Apr 2023 07:34:49 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
3aca6d6
Fri 21 Apr 2023 07:35:39 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
d752f75
Sat 22 Apr 2023 01:24:25 AM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  18|3
total_score: 35/70
7970c85
Sat 22 Apr 2023 01:34:25 AM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  18|3
total_score: 35/70
b41a481
Sat 22 Apr 2023 01:46:40 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 35/70
16737ad
Sat 22 Apr 2023 01:47:04 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 35/70
59bf386
Sat 22 Apr 2023 01:49:20 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  22|2
total_score: 45/70
fac3ada
